fix gif spacing

--- a/wp-content/themes/acme-fx/style.css
+++ b/wp-content/themes/acme-fx/style.css
@@ -3361,7 +3361,6 @@ body .fbx-inner {
 	padding-top:30px;
 	height:0;
 	overflow:hidden;
-	margin-bottom: 50px;
 }
 
 /* # Media Queries
